#1517 improve load test perf